<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/controller_bt_stop"
        android:layout_centerInParent="true"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:text="@string/controller_button_stop"/>

    <Button
        android:id="@+id/controller_bt_go"
        android:layout_above="@id/controller_bt_stop"
        android:layout_centerHorizontal="true"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginBottom="24dp"
        android:text="@string/controller_button_go"/>

    <Button
        android:id="@+id/controller_bt_left"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@id/controller_bt_stop"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginRight="24dp"
        android:text="@string/controller_button_left"/>

    <Button
        android:id="@+id/controller_bt_right"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@id/controller_bt_stop"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginLeft="24dp"
        android:text="@string/controller_button_right"/>

    <Button
        android:id="@+id/controller_bt_back"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/controller_bt_stop"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginTop="24dp"
        android:text="@string/controller_button_back"/>


</RelativeLayout>